--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html>
-
-  <!-- DEVELOPER NOTE: I am an amateur at best with HTML, so if you can see something I'm doing down below that could be cleaned up, or otherwise handled more elegantly, drop me a line! (651) 269-9397 -->
   
   <head>
     <title>Warren O'Brien Online Resume</title>
@@ -26,8 +24,14 @@
           <h3>Software Freelancer</h3>
           <p>Eau Claire, WI</p>
           <p>(651) 269-9397</p>
-          <a href="https://www.linkedin.com/in/warren-obrien/">LinkedIn</a>
-          <a href="https://www.facebook.com/whoguy">Facebook</a>
+          <div class="res_header_bottom_social">
+            <a target="_blank" href="https://www.linkedin.com/in/warren-obrien/"> 
+              <img src="icon_li.png">
+            </a>
+            <a target="_blank" href="https://www.facebook.com/whoguy">
+              <img src="icon_fb.png">
+            </a>
+          </div>
         </div>
       </div>
     </div>
