--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <div class="res_header_bottom">
         <div class="res_header_bottom_text">
-          <h3>People Centric, User Oriented</h3>
+          <h3>People-Centric, User-Oriented</h3>
           <h3>Software Freelancer</h3>
           <p>Eau Claire, WI</p>
           <p>(651) 269-9397</p>
