--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <img src="beforedev_small.png">
         </a>
         <div class="res_content_gallery_desc">
-          <p>NFS DB Before UI Overhaul</p>
+          <p>NFS DB Before UI Overhaul (I have permission to share this content.)</p>
         </div>
       </div>
       <div class="res_content_gallery_item">
